[package]
name = "stump"
version = "0.2.1"
edition = "2021"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
description = "Simplified command line logging"
repository = "https://github.com/kmgill/stump"
readme = "README.md"
license = "MIT" 

[lib]
name = "stump"

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
termsize = "0.1.6"
anyhow = "1.0.65"